--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
         <div class="content">     
             <div class="main-content">
                 <h1>Replica Airbnb</h1>
+                <div class="flex-container">
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tea_LbyPkb0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <p>video shows mobile and desktop size side-by-side</p>
+                    </div>
+                    <div class="desc">
+                    <p>An AirBnB inspired sight for travelers book their stays around the country. The site includes registration and login, the ability to create and book listings, searching listings by city and attributes, and leaving reviews. Built using Django, Python, Bootstrap, JS, and a MySQL server on the back end.</p>
+                    </div>
+                </div>
+                <div class="flex-container">
+                    <a class="btn" href="https://github.com/jkrat/Airbnb-replica">See the code on GitHub</a>
+                </div>
             </div> 
         </div>
     </div>
@@ -58,41 +70,89 @@
         <div class="content"> 
             <div class="main-content">
                 <h1>Let's Eat</h1>
+                <div class="flex-container">
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/4UGAvopR31c?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <p>A simple application for browsing restaurants and leaving reviews. Built with MongoDB, Express, Angular and Node.js. Visuals enhanced with Angular animations. Feel free to check it out an leave a review of your favorite restaurant.</p>
+                </div>
+                <div class="flex-container">
+                    <a class="btn" href="http://18.220.28.5">Visit the deployed site</a>
+                    <a class="btn" href="https://github.com/jkrat/LetsEat">See the code on GitHub</a>
+                </div>
             </div>    
         </div>
     </div>
     <div class="box">
         <div class="content"> 
             <div class="main-content">
-                <h1>Multi-player PONG application</h1>
+                <h1>Space PONG (work in progress)</h1>
+                <div class="flex-container">
+                        <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img class="d-block w-100" src="./static/PONG1.png" alt="First slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="./static/PONG2.png" alt="Second slide">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div> -->
+                              <div>
+                    <img class="pong" src="./static/PONG2.png">
+                    <img class="pong" src="./static/PONG1.png">
+                </div>
+                    <p>Multiplayer web-based Pong game build with Java Spring and Angular utilizing websockets. I am on a team of 5 people working on this. Check back for more updates.</p>
+                </div>
+                <div class="flex-container">
+                    <a class="btn" href="https://github.com/Skyler827/PongApp">See the code on GitHub</a>
+                </div>
             </div>    
         </div>
     </div>
     <div class="seperator">
         <div class="content">
-                <h1>SKILLS</h1> 
+                <h1></h1>
         </div>
     </div>
     <div class="box">
         <div class="content"> 
             <div class="main-content">
                     <div class="owl-carousel">
-                        <div> Your Content </div>
+                        <div> Skills </div>
                     </div>
             </div>    
         </div>
     </div>
-    <div class="footer">
+    <!-- <footer class="footer">
         <div class="content"> 
-            <ul class="inline">
-                <li><a href=""><i class="fab fa-github"></i></a></li>
-                <li><a href=""><i class="fab fa-github-square"></i></a></li>
-                <li><a href=""><i class="fab fa-envelope"></i></a></li>
-                <li><a href=""><i class="fabfa-linkedin-in"></i></a></li>
-                <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+            <ul class="inline footerList">
+                <li><a href="github.com/jkrat"><i class="fab fa-github"></i></a></li>
+                <li>//</li>
+                <li><a href="www.linkedin.com/in/jameskratus/"><i class="fab fa-linkedin"></i></a></li>
             </ul>   
-        </div>
-    </div>
+        </div> -->
+    <!-- </footer> -->
+    <nav class="navbar fixed-bottom">
+        <ul class="inline footerList">
+            <li><a href="github.com/jkrat"><i class="fab fa-github"></i></a></li>
+            <li>//</li>
+            <li><a href="www.linkedin.com/in/jameskratus/"><i class="fab fa-linkedin"></i></a></li>
+        </ul>  
+    </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
